# OpenGL_Project_Template

./: .gitignore  README.md  build.sh  configure.sh  run.sh
src/: CMakeLists.txt  main.cpp
